--- a/arch/arm64/configs/aosp_tama_akari_defconfig
+++ b/arch/arm64/configs/aosp_tama_akari_defconfig
@@ -1,4 +1,5 @@
 # CONFIG_FHANDLE is not set
+CONFIG_LOCALVERSION="KernelSU"
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -41,6 +42,8 @@ CONFIG_EMBEDDED=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
 CONFIG_KPROBES=y
+CONFIG_HAVE_KPROBES=y
+CONFIG_KPROBE_EVENTS=y
 CONFIG_JUMP_LABEL=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
